--- a/Main.css
+++ b/Main.css
@@ -5,17 +5,18 @@ font-family: 'Roboto', sans-serif;
 }
 
 *::-webkit-scrollbar {
-width: 2px;
+    width: 2px;
+    height: 6px;
 }
 
 *::-webkit-scrollbar-track {
-box-shadow: inset 0 0 5px #131313;
-border-radius: 10px;
+    box-shadow: inset 0 0 5px #131313;
+    border-radius: 10px;
 }
 
 *::-webkit-scrollbar-thumb {
-background: white;
-border-radius: 10px;
+    background: white;
+    border-radius: 10px;
 }
 
 body {
@@ -33,17 +34,63 @@ body {
     align-items: center;
 }
 
-.listsContainer {
+.listsContainer, .listsTabs {
     position: relative;
     margin: 0;
     padding: 0;
     box-shadow: 0px 0px 14px 0px rgba(44, 44, 44, 0.75);
     width: 100%;
-    height: 100%;
     background-color: #131313;
     box-sizing: border-box;
     overflow: hidden;
     border-radius: 10px;
+}
+
+.listsContainer {
+    height: 100%;
+}
+
+.listsTabs {
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 20px;
+    height: fit-content;
+    overflow: unset;
+}
+
+.listsTabsItem, .listsTabsItemActive {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+    border-color: white;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 5px;
+    height: auto;
+    line-height: 36px;
+    min-width: 60px;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.listsTabsItemActive {
+    background-color: white;
+    color: black;
+    box-shadow: inset 0px 0px 0px 2px #000000;
+}
+
+.liststTabOverflowHelper {
+    min-height: 60px;
+    display: flex;
+    overflow-x: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .listContainer {
