--- a/Main.css
+++ b/Main.css
@@ -32,6 +32,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+	background-repeat:no-repeat;
+	background-position:center; 
 }
 
 .listsContainer, .listsTabs {
